kubernetes/infrastructure/grafana/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: infrastructure
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana
        ports:
          - containerPort: 3000
            name: "graphana"
        volumeMounts:
        - name: grafana-config
          mountPath: /config/
      volumes:
        - name: grafana-config
          configMap:
            name: grafana-config
