kubernetes/infrastructure/grafana/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: servers
  labels:
    app: grafana
  name: grafana
  namespace: infrastructure
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: grafana-port
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: grafana
  sessionAffinity: None
  type: LoadBalancer
  loadBalancerIP: 10.8.1.0
